k8s/tsdd/mszs-dingdong/tsdd/tsdd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mszs-tsdd-svc
  namespace: mszs
spec:
  type: ClusterIP
  selector:
    name: mszs-tsdd-server
  ports:
    - name: webhook
      port: 6979
      targetPort: 6979
      protocol: TCP
    - name: http
      port: 8090
      targetPort: 8090
      protocol: TCP
