k8s/tsdd/mszs-dingdong/tsdd/tsdd-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-mszs-cyou-ingress
  namespace: mszs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - api-ms.mszs.cyou
  #   secretName: api-mszs-cyou-tls
  rules:
  - host: api-ms.mszs.cyou
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mszs-tsdd-svc
            port:
              number: 8090
